# big-data-derby-kaggle

./: .gitignore  README.md  TODOS.md  pyproject.toml
notebooks/nad/: eda.ipynb
notebooks/sainth/: eda.ipynb
